--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,4 +18,24 @@
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
         <item name="colorControlActivated">#FFCC00</item>
     </style>
+
+
+    <!--收银设置界面tv风格-->
+    <style name="tv_pay_set">
+
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:gravity">left</item>
+        <item name="android:padding">10dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">#333333</item>
+    </style>
+    <!--全能王设置界面tv风格-->
+    <style name="tv_sp_set" parent="tv_pay_set">
+        <item name="android:background">@drawable/selector_bg_sp_set</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:padding">18dp</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
 </resources>
