--- a/BusinessLib/baselib/src/main/res/values/colors.xml
+++ b/BusinessLib/baselib/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="white_1st">#ffffff</color>
     <color name="white_2nd">#ededed</color>
     <color name="white_3th">#e6e6e6</color>
+    <color name="white_4th">#66ffffff</color>
     <!--yellow-->
     <color name="yellow_1st">#cc9600</color>
 
