--- a/BusinessLib/cash/src/main/res/layout/fragment_orders.xml
+++ b/BusinessLib/cash/src/main/res/layout/fragment_orders.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:orientation="vertical"
+              app:tabBackground="@color/app_color"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <cn.mwee.android.pay.base.widget.TitleBar
+    <com.zjy.zlibrary.widget.TitleBar
         android:id="@+id/titleBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,8 +19,6 @@
         app:tabBackground="@color/app_color"
         app:tabIndicatorColor="@color/white_1st"
         app:tabMaxWidth="0dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
         app:tabIndicatorHeight="3dp"
         app:tabGravity="fill"
         app:tabMode="fixed"
