--- a/BusinessLib/cash/src/main/res/layout/fragment_orders.xml
+++ b/BusinessLib/cash/src/main/res/layout/fragment_orders.xml
@@ -1,36 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:orientation="vertical"
-              app:tabBackground="@color/app_color"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              app:tabBackground="@color/app_color">
+
     <com.zjy.zlibrary.widget.TitleBar
         android:id="@+id/titleBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/app_color"/>
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tab_order_type"
+    <com.zjy.zlibrary.component.scrollablelayout.ScrollableLayout
+        android:id="@+id/scrollableLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/app_color"
-        app:tabBackground="@color/app_color"
-        app:tabIndicatorColor="@color/white_1st"
-        app:tabMaxWidth="0dp"
-        app:tabIndicatorHeight="3dp"
-        app:tabGravity="fill"
-        app:tabMode="fixed"
-        app:tabSelectedTextColor="@color/white_1st"
-        app:tabTextColor="@color/white_4th">
-    </android.support.design.widget.TabLayout>
+        android:layout_height="match_parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:text="header"
+            android:gravity="center"
+            android:background="@color/black_1st"
+            />
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tab_order_type"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/app_color"
+            app:tabBackground="@color/app_color"
+            app:tabGravity="fill"
+            app:tabIndicatorColor="@color/white_1st"
+            app:tabIndicatorHeight="3dp"
+            app:tabMaxWidth="0dp"
+            app:tabMode="fixed"
+            app:tabSelectedTextColor="@color/white_1st"
+            app:tabTextColor="@color/white_4th">
+        </android.support.design.widget.TabLayout>
 
-    <android.support.v4.view.ViewPager
-        android:background="@color/white_1st"
-        android:id="@+id/viewPager_order_type"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
-    </android.support.v4.view.ViewPager>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager_order_type"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/white_1st"
+            >
+        </android.support.v4.view.ViewPager>
+    </com.zjy.zlibrary.component.scrollablelayout.ScrollableLayout>
 </LinearLayout>
