--- a/BusinessLib/member/src/main/res/layout/member_info.xml
+++ b/BusinessLib/member/src/main/res/layout/member_info.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:twotext="http://schemas.android.com/apk/res-auto/com.zjy.zlibrary.widget.TwoTextView"
+              xmlns:twotext="http://schemas.android.com/apk/res-auto"
            >
     <com.zjy.zlibrary.widget.TwoTextView
         android:id="@+id/tv_member_name"
