--- a/sencond/src/main/res/layout/activity_main.xml
+++ b/sencond/src/main/res/layout/activity_main.xml
@@ -8,60 +8,9 @@
               android:background="@android:color/white"
               android:orientation="vertical"
              >
+    <android.support.v7.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </android.support.v7.widget.RecyclerView>
 
-    <com.robertlevonyan.views.chip.Chip
-        android:id="@+id/football_chip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        app:backgroundColor="@color/colorFootball"
-        app:chipIcon="@drawable/football"
-        app:chipText="@string/football"
-        app:closeColor="@color/colorFootballSelected"
-        app:hasIcon="true"
-        app:selectable="true"
-
-        app:closable="true"
-        app:selectedCloseColor="@color/colorFootballSelected"
-        app:selectedTextColor="@color/colorFootballSelected"
-
-        app:selectedBackgroundColor="@color/colorFootballSelected"
-        app:textColor="@color/colorFootballSelected" />
-
-    <com.robertlevonyan.views.chip.Chip
-        android:id="@+id/basketball_chip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        app:backgroundColor="@color/colorBasketball"
-        app:chipIcon="@drawable/basketball"
-        app:chipText="@string/basketball"
-        app:closeColor="@color/colorBasketballSelected"
-        app:hasIcon="true"
-        app:selectable="true"
-        app:selectedBackgroundColor="@color/colorBasketballSelected"
-        app:textColor="@color/colorBasketballSelected" />
-
-    <com.robertlevonyan.views.chip.Chip
-        android:id="@+id/tennis_chip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        app:backgroundColor="@color/colorTennis"
-        app:chipIcon="@drawable/tennis"
-        app:chipText="@string/tennis"
-        app:closeColor="@color/colorTennisSelected"
-        app:hasIcon="true"
-        app:selectable="true"
-        app:selectedBackgroundColor="@color/colorTennisSelected"
-        app:textColor="@color/colorTennisSelected" />
-    <Button
-        android:id="@+id/btn_traffics"
-        android:text="获取当前使用流量"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    <TextView
-        android:id="@+id/tv_traffics"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
 </LinearLayout>
