--- a/BusinessLib/baselib/src/main/res/values/colors.xml
+++ b/BusinessLib/baselib/src/main/res/values/colors.xml
@@ -20,6 +20,7 @@
     <color name="gray_5th">#cccccc</color>
     <color name="gray_6th">#999999</color>
     <color name="gray_7th">#cacaca</color>
+    <color name="gray_8th">#757575</color>
 
     <!--black-->
     <color name="black_1st">#333333</color>
