--- a/BusinessLib/cash/src/main/res/layout/fragment_cash.xml
+++ b/BusinessLib/cash/src/main/res/layout/fragment_cash.xml
@@ -29,7 +29,7 @@
             />
 
         <LinearLayout
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_above="@+id/num_soft_keyboard"
             android:background="#fff"
@@ -52,8 +52,6 @@
                 style="@style/keyBoard_number_new"
                 android:text="@string/member_pay"
                 android:visibility="visible"/>
-
-
         </LinearLayout>
     </RelativeLayout>
 
@@ -109,94 +107,11 @@
             android:textSize="30sp"
             android:visibility="gone"/>
 
-        <com.zjy.zlibrary.widget.InterceptRelativeLayout
-            android:id="@+id/rl_money"
+        <FrameLayout
+            android:id="@+id/cash_edit"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:orientation="horizontal"
-            android:paddingLeft="20dp"
-            android:visibility="visible">
-
-            <TextView
-                android:id="@+id/tv_money_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:layout_weight="1"
-                android:text="@string/sum_of_consumption"
-                android:textColor="@color/selector_pay_text"
-                android:textSize="20sp"/>
-
-            <com.zjy.cash.component.widget.MoneyEdit
-                android:id="@+id/tv_money"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="right"
-                android:layout_toRightOf="@id/tv_money_title"
-                android:background="@color/white_1st"
-                android:editable="false"
-                android:gravity="right|center_vertical"
-                android:paddingRight="20dp"
-                android:textColor="@color/selector_pay_edit_text"
-                android:textSize="30sp"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@id/tv_money_title"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/selector_pay_edit_line">
-            </View>
-        </com.zjy.zlibrary.widget.InterceptRelativeLayout>
-
-        <com.zjy.zlibrary.widget.InterceptRelativeLayout
-            android:id="@+id/rl_discount"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:orientation="horizontal"
-            android:paddingLeft="20dp"
-            android:visibility="visible">
-
-            <TextView
-                android:id="@+id/tv_discount_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:text="@string/in_discount"
-                android:textColor="@color/selector_pay_text"
-                android:textSize="20sp"/>
-
-            <com.zjy.cash.component.widget.MoneyEdit
-                android:id="@+id/et_pay_discount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="right"
-                android:layout_toRightOf="@id/tv_discount_title"
-                android:background="@color/white_1st"
-                android:editable="false"
-                android:gravity="right|center_vertical"
-                android:paddingRight="20dp"
-                android:textColor="@color/selector_pay_edit_text"
-                android:textSize="20sp"/>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_below="@id/tv_discount_title"
-                android:layout_marginRight="20dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/selector_pay_edit_line">
-            </View>
-        </com.zjy.zlibrary.widget.InterceptRelativeLayout>
+            android:layout_height="wrap_content">
+        </FrameLayout>
 
     </LinearLayout>
 
