--- a/sencond/src/main/res/layout/activity_main.xml
+++ b/sencond/src/main/res/layout/activity_main.xml
@@ -8,9 +8,8 @@
               android:background="@android:color/white"
               android:orientation="vertical"
              >
-    <android.support.v7.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </android.support.v7.widget.RecyclerView>
-
+            <TextView
+                android:id="@+id/tv_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
 </LinearLayout>
